# split-gui

./: .gitignore  CMakeLists.txt  README.md  license  makefile
docs/dev/: build.md  window.md
docs/user/: gettingStarted.md
include/splitgui/: events.hpp  graphics.hpp  interface.hpp  lib.h  lib.hpp  logger.hpp  result.hpp  scene.hpp  structs.hpp  window.hpp
src/: linear.cpp  logger.cpp  path.cpp  quaternion.cpp  splitgui.cpp  window.cpp
src/events/: builtin.cpp  events.cpp
src/graphics/: graphics.cpp  interface.hpp
src/graphics/vulkan/: buffer.cpp  cleanup.cpp  commands.cpp  contourImage.cpp  crop.cpp  depth.cpp  descriptors.cpp  events.cpp  frame.cpp  helpers.cpp  instance.cpp  msdfLoader.cpp  pipeline.cpp  rect.cpp  renderpass.cpp  scene.cpp  setup.cpp  submit.cpp  svg.cpp  swapchain.cpp  sync.cpp  system.cpp  text.cpp  texture.cpp  transparency.cpp  uniform.cpp  update.cpp  vector.cpp  vulkan.cpp  vulkan.hpp
src/graphics/vulkan/scene/: depth.cpp  descriptor.cpp  framebuffer.cpp  output.cpp  pipeline.cpp  renderpass.cpp  uniform.cpp
src/graphics/vulkan/vector/: descriptor.cpp  edges.cpp  output.cpp  pipeline.cpp
src/include/: splitgui.hpp
src/interface/: interface.cpp  interfaceElement.cpp  unitExpression.cpp  xmlParser.cpp
src/interface/default/: bindPoint.cpp  binding.cpp  box.cpp  default.cpp  list.cpp  mask.cpp  media.cpp  meta.cpp  overlay.cpp  rect.cpp  scene.cpp  split.cpp  switch.cpp  text.cpp  transform.cpp
src/interface/xml/: binding.cpp  box.cpp  cleanup.cpp  default.cpp  list.cpp  mask.cpp  media.cpp  meta.cpp  overlay.cpp  parse.cpp  rect.cpp  scene.cpp  setup.cpp  split.cpp  switch.cpp  text.cpp  tokens.cpp  transform.cpp  xmlParser.cpp  xmlParser.hpp
src/scene/: camera.cpp  cube.cpp  grid.cpp  mesh.cpp  node.cpp  scene.cpp
src/shaders/: compute.comp  fragment.frag  geometry.geom  scene-fragment.frag  scene-vertex.vert  vector-render.comp  vector-transform.comp  vertex.vert
src/window/: window.cpp
src/window/glfw/: callbacks.cpp  cleanup.cpp  converters.cpp  function.cpp  getters.cpp  glfw.cpp  glfw.hpp  setup.cpp  vulkan.cpp
test/bindingTest/: bind.xml  index.xml  main.cpp
test/cropRegionTest/: main.cpp
test/cubeTest/: index.xml  main.cpp
test/depthTest/: index.xml  main.cpp
test/eventTest/: main.cpp
test/graphicsTest/: main.cpp
test/listTest/: index.xml  main.cpp
test/multiSceneTest/: index.xml  main.cpp
test/multiWindowTest/: main.cpp
test/quadTest/: main.cpp
test/rectAndSceneTest/: index.xml  main.cpp
test/rectTest/: main.cpp
test/sceneTest/: index.xml  main.cpp
test/simpleWindow/: main.cpp
test/splitTest/: main.cpp
test/svgTest/: main.cpp
test/switchTest/: index.xml  main.cpp
test/textTest/: main.cpp
test/textText/: main.cpp
test/textXmlTest/: index.xml  main.cpp
test/threadTest/: index.xml  main.cpp
test/transformTest/: index.xml  main.cpp
test/vectorEngineTest/: index.xml  main.cpp
test/vectorTest/: main.cpp
test/xmlTest/: index.xml  main.cpp
tools/buildTools/: build.py
tools/moduleTools/: modules.py
tools/testTools/: test.py
